# kcm_securityscanner

./: CMakeLists.txt  LICENSE  README.md  SecurityScanner.desktop  install.sh  install_dev_debug.sh  install_dev_release.sh  securityscanner.cpp  securityscanner.h  test.sh  uninstall.sh
package/: kcm_securityscanner.json
package/contents/ui/: main.qml
